<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/detailActionBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/mainTitle"
            app:titleTextColor="@color/white"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <ImageView
            android:id="@+id/detailCoverBuku"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            tools:src="@tools:sample/avatars"
            android:scaleType="fitCenter"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailActionBar"/>

        <TextView
            android:id="@+id/detailJudulBuku"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            tools:text="Red Rising"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailCoverBuku"/>

        <TextView
            android:id="@+id/detailPenulisBuku"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="4dp"
            tools:text="Andree Meilio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailJudulBuku"/>

        <TextView
            android:id="@+id/detailRatingBuku"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            tools:text="Rating: 4"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailPenulisBuku"/>

        <TextView
            android:id="@+id/detailBukuTitle"
            android:text="@string/detailBukuLabel"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailRatingBuku"/>

        <LinearLayout
            android:id="@+id/detailFormatContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailBukuTitle">

            <TextView
                android:id="@+id/detailFormatTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/format_label"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/detailFormatValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:maxLines="2"
                android:textStyle="bold"
                tools:text="433 Halaman"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detailPublishedContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailFormatContainer">

            <TextView
                android:id="@+id/detailPublishedTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/published_label"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/detailPublishedValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:maxLines="2"
                android:textStyle="bold"
                tools:text="433 Halaman"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detailIsbnContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailPublishedContainer">

            <TextView
                android:id="@+id/detailIsbnTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/isbn_label"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/detailIsbnValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:maxLines="2"
                android:textStyle="bold"
                tools:text="433 Halaman"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detailAsinContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailIsbnContainer">

            <TextView
                android:id="@+id/detailAsinTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/asin_label"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/detailAsinValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:maxLines="2"
                android:textStyle="bold"
                tools:text="433 Halaman"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detailLanguageContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailAsinContainer">

            <TextView
                android:id="@+id/detailLanguageTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/language"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/detailLanguageValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:maxLines="2"
                android:textStyle="bold"
                tools:text="433 Halaman"
                android:textSize="14sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/detailDescriptionTitle"
            android:text="@string/description_titile"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailLanguageContainer"/>

        <TextView
            android:id="@+id/detailDescriptionValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            tools:text="433 Halaman"
            android:textSize="14sp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailDescriptionTitle"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailDescriptionValue"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>